Updating the title.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,7 +9,7 @@
     <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-    <title>{%=o.htmlWebpackPlugin.options.title || 'Deltacast'%}</title>
+    <title>{%=o.htmlWebpackPlugin.options.title || 'Starter Kit'%}</title>
     {% if (o.htmlWebpackPlugin.files.favicon) { %}
     <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}">
     {% } %}
